--- a/reading.html
+++ b/reading.html
@@ -422,11 +422,9 @@ synchronized outdoor evolution experiments of Arabidopsis thaliana</p>
 </div>
 <div id="tuesday-july-22" class="section level4">
 <h4>Tuesday July 22</h4>
-<p>[Zebell, et al, 2025]<a
-href="https://www.nature.com/articles/s41586-025-09243-0"
-class="uri">https://www.nature.com/articles/s41586-025-09243-0</a>)
-Cryptic variation fuels plant phenotypic change through hierarchical
-epistasis</p>
+<p><a href="https://www.nature.com/articles/s41586-025-09243-0">Zebell,
+et al, 2025</a> Cryptic variation fuels plant phenotypic change through
+hierarchical epistasis</p>
 </div>
 <div id="tuesday-july-15" class="section level4">
 <h4>Tuesday July 15</h4>
