--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,30 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="september" class="section level3">
+<h3>September</h3>
+<div id="tuesday-september-23" class="section level4">
+<h4>Tuesday September 23</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2025.08.01.667986v1">Morris
+et al, bioRxiv</a> Developing future resilience from signatures of
+adaptation across the sorghum pangenome</p>
+</div>
+<div id="tuesday-september-16" class="section level4">
+<h4>Tuesday September 16</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2025.07.07.663194v1">Singh
+et al, bioRxiv</a> Highly modular genomic architecture underlies
+combinatorial mechanism of speciation and adaptive radiation</p>
+</div>
+<div id="tuesday-september-9" class="section level4">
+<h4>Tuesday September 9</h4>
+<p><a
+href="https://www.cell.com/cell/fulltext/S0092-8674(25)00736-6?ftag=MSF0951a18">Zhang
+et al, 2025</a> Ancient hybridization underlies tuberization and
+radiation of the potato lineage</p>
+</div>
+</div>
 <div id="august" class="section level3">
 <h3>August</h3>
 <p>Summer break</p>
@@ -667,7 +691,7 @@ preprint</a> The utility of environmental data from traditional
 varieties for climate-adaptive maize breeding</p>
 </div>
 </div>
-<div id="september" class="section level3">
+<div id="september-1" class="section level3">
 <h3>September</h3>
 <div id="tuesday-september-24" class="section level4">
 <h4>Tuesday September 24</h4>
@@ -952,7 +976,7 @@ et al., 2023</a> Purging due to self-fertilization does not prevent
 accumulation of expansion load</p>
 </div>
 </div>
-<div id="september-1" class="section level3">
+<div id="september-2" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-21" class="section level4">
 <h4>Thursday September 21</h4>
@@ -1166,7 +1190,7 @@ href="https://www.science.org/doi/10.1126/science.abn5642">Exposito-Alonso,
 et al 2022</a> Genetic diversity loss in the Anthropocene</p>
 </div>
 </div>
-<div id="september-2" class="section level3">
+<div id="september-3" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-29" class="section level4">
 <h4>Thursday September 29</h4>
@@ -1406,7 +1430,7 @@ et al, preprint</a> Not so local: the population genetics of convergent
 adaptation in maize and teosinte</p>
 </div>
 </div>
-<div id="september-3" class="section level3">
+<div id="september-4" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-30" class="section level4">
 <h4>Thursday September 30</h4>
@@ -1686,7 +1710,7 @@ Corre et al. 2020</a> Adaptive introgression from maize has facilitated
 the establishment of teosinte as a noxious weed in Europe</p>
 </div>
 </div>
-<div id="september-4" class="section level3">
+<div id="september-5" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-24" class="section level4">
 <h4>Thursday September 24</h4>
@@ -1918,7 +1942,7 @@ sunflowers</p>
 <p>Holiday - No C.R.O.P</p>
 </div>
 </div>
-<div id="september-5" class="section level3">
+<div id="september-6" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-26" class="section level4">
 <h4>Thursday September 26</h4>
