--- a/people.html
+++ b/people.html
@@ -562,39 +562,17 @@ pipetting magic. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 -->
 </div>
-<div id="bsc-thesis" class="section level2">
-<h2>BSc Thesis</h2>
+<div id="msc-thesis" class="section level2">
+<h2>MSc Thesis</h2>
 <div style="float: left">
-<p><img src="own_images/people/Bartlomiej_Chachula.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/fernanda_Giampaoli.jpeg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Bartlomiej Chachula</strong>
-<div style="float: left">
-
-</div>
-<p>Bartlomiej seed color change during amaranth domestication using AI
-driven seed phenotyping. <!-- break --> <br> <br> <br> <br> <br> <br>
-<br></p>
-<div style="float: left">
-<p><img src="own_images/people/Maria_Rodriguez.JPG" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Maria Rodriguez</strong>
+<strong>Fernanda Daniela Giampaoli</strong>
 <div style="float: left">
 
 </div>
-<p>Maria studie betalain accumulation and its fitness consequences under
-stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
-<br></p>
-<div style="float: left">
-<p><img src="own_images/people/Carlotta_Sehl.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Carlotta Sehl</strong>
-<div style="float: left">
-
-</div>
-<p>Carlotta develops grafting as tool for genome editing in
-amaranth.</p>
-<!-- break -->
-<p><br> <br> <br> <br> <br> <br> <br></p>
+<p>Fernanda helps with wet lab duties. <!-- break --> <br> <br> <br>
+<br> <br> <br> <br></p>
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
