--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,16 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="october" class="section level3">
+<h3>October</h3>
+<div id="tuesday-october-14" class="section level4">
+<h4>Tuesday October 14</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2025.10.02.679894v1">Pineau
+et al, bioRxiv</a> The genomic response to drought across spatiotemporal
+scales in Amaranthus tuberculatus</p>
+</div>
+</div>
 <div id="september" class="section level3">
 <h3>September</h3>
 <div id="tuesday-september-23" class="section level4">
@@ -655,7 +665,7 @@ divergence in crops</p>
 al, 2024</a> Human-driven evolution of color in a stonefly mimic</p>
 </div>
 </div>
-<div id="october" class="section level3">
+<div id="october-1" class="section level3">
 <h3>October</h3>
 <div id="tuesday-october-29" class="section level4">
 <h4>Tuesday October 29</h4>
@@ -944,7 +954,7 @@ et al., preprint</a> Polygenic barriers to gene flow: the role of
 dominance, haploid selection and heterogeneous genetic architectures</p>
 </div>
 </div>
-<div id="october-1" class="section level3">
+<div id="october-2" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-26" class="section level4">
 <h4>Thursday October 26</h4>
@@ -1175,7 +1185,7 @@ the loss of an anthocyanin carrier protein in betalain-pigmented
 Caryophyllales</p>
 </div>
 </div>
-<div id="october-2" class="section level3">
+<div id="october-3" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-13" class="section level4">
 <h4>Thursday October 13</h4>
@@ -1408,7 +1418,7 @@ al, 2021</a> Genomic evidence of human selection on Vavilovian
 mimicry</p>
 </div>
 </div>
-<div id="october-3" class="section level3">
+<div id="october-4" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-28" class="section level4">
 <h4>Thursday October 28</h4>
@@ -1674,7 +1684,7 @@ et al, preprint</a> Experimental evolution of adaptive divergence under
 varying degrees of gene flow</p>
 </div>
 </div>
-<div id="october-4" class="section level3">
+<div id="october-5" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-29" class="section level4">
 <h4>Thursday October 29</h4>
@@ -1909,7 +1919,7 @@ et al 2019</a> The Genomic Basis for Short-Term Evolution of
 Environmental Adaptation in Maize</p>
 </div>
 </div>
-<div id="october-5" class="section level3">
+<div id="october-6" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-31" class="section level4">
 <h4>Thursday October 31</h4>
