--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,19 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="tuesday-october-28" class="section level4">
+<h4>Tuesday October 28</h4>
+<p><a href="https://www.nature.com/articles/s41586-025-09533-7">Guo et
+al, 2025</a> A haplotype-based evolutionary history of barley
+domestication</p>
+</div>
+<div id="tuesday-october-21" class="section level4">
+<h4>Tuesday October 21</h4>
+<p><a
+href="https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.70238">Fiscus
+et al, 2025</a> Mutational load and adaptive variation are shaped by
+climate and species range dynamics in Vitis arizonica</p>
+</div>
 <div id="tuesday-october-14" class="section level4">
 <h4>Tuesday October 14</h4>
 <p><a
