--- a/about.html
+++ b/about.html
@@ -408,7 +408,7 @@ Cologne, Germany<br />
 </li>
 <li>2017 -2019 Postdoc - Department of Plant Sciences, University of
 California Davis, USA<br />
-<a href="http://rilab.org">Ross-Ibarra lab</a></li>
+<a href="https://rilab.ucdavis.edu/">Ross-Ibarra lab</a></li>
 <li>11/2016 - 01/2017 Research Associate - Crop Biodiversity and
 Breeding Informatics, University of Hohenheim, Germany<br />
 <a href="http://evoplant.uni-hohenheim.de">Schmid lab</a></li>
