crop and people

--- a/people.html
+++ b/people.html
@@ -452,23 +452,45 @@ href="https://trr341.uni-koeln.de/">TRR 341</a>. <!-- break --> <br>
 <p>Akanksha studies the introduction history of grain amaranth to India
 and the sources of adaptive alleles. <!-- break --> <br> <br> <br> <br>
 <br> <br> <br></p>
+<!-- break 
 <div style="float: left">
-<p><img src="own_images/people/Takou-Margarita-2.jpg" style="width: 100px ;border:10px solid white"></p>
+<img src="own_images/people/Takou-Margarita-2.jpg" style="width: 100px ;border:10px solid white">
 </div>
-<strong>Margarita Takou</strong>
+
+**Margarita Takou** 
 <div style="float: left">
-<p><a href="https://scholar.google.com/citations?user=raYNChEAAAAJ&hl=en"><img src="own_images/scholar.png" style="width: 30px;"></a>
-<a href="mailto:mtakou1@uni-koeln.de"><img src="own_images/email_icon.png" style="width: 30px;"></a></p>
-</div>
-<div style="float: left">
+<a href="https://scholar.google.com/citations?user=raYNChEAAAAJ&hl=en"><img src="own_images/scholar.png" style="width: 30px;"></a>
+<a href="mailto:mtakou1@uni-koeln.de"><img src="own_images/email_icon.png" style="width: 30px;"></a>
 
 </div>
-<p>Margarita studies polygenic selection in an experimental population
-of European maize. <!-- break --> <br> <br> <br> <br> <br> <br> <br>
-<br> <br></p>
+<div style="float: left">
+</div>
+
+Margarita studies polygenic selection in an experimental population of European maize. 
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+-->
 </div>
 <div id="phd-candidates" class="section level2">
 <h2>PhD candidates</h2>
+<div style="float: left">
+<p><img src="own_images/people/fernanda_Giampaoli.jpeg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Fernanda Daniela Giampaoli</strong>
+<div style="float: left">
+
+</div>
+<p>Fernanda studies the evolution of betalain pigments and trait
+novelty. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/Corbinian_Graf.JPG" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -562,29 +584,22 @@ pipetting magic. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 -->
 </div>
-<div id="msc-thesis" class="section level2">
-<h2>MSc Thesis</h2>
+<div id="bsc-thesis" class="section level2">
+<h2>BSc Thesis</h2>
 <div style="float: left">
-<p><img src="own_images/people/fernanda_Giampaoli.jpeg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Fernanda Daniela Giampaoli</strong>
+<strong>Cedric Koehler</strong>
 <div style="float: left">
 
 </div>
-<p>Fernanda helps with wet lab duties. <!-- break --> <br> <br> <br>
-<br> <br> <br> <br></p>
+<p>Cedric studies the genetic control of domestication traits in
+amaranth.</p>
+<!-- break -->
+<p><br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
-<div style="float: left">
-<p><img src="own_images/people/fernanda_Giampaoli.jpeg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Fernanda Daniela Giampaoli</strong>
-<div style="float: left">
-
-</div>
-<p>Fernanda helps with wet lab duties. <!-- break --> <br> <br> <br>
-<br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -594,27 +609,17 @@ pipetting magic. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <p>Sophie helps with plant work and field experiments. <!-- break -->
 <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Alicia Vossmann</strong>
+<div style="float: left">
+
+</div>
+<p>Alicia is an intern, testing the function of transcription factors
+regulating betalain biosynthesis.</p>
+<p><br> <br> <br> <br> <br> <br> <br></p>
 <!-- break 
-
-<div style="float: left">
-<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
-</div>
-
-
-**Anny Garces** 
-<div style="float: left">
-</div>
-Anny is a CEPLAS rotation student exploring structural variation in grain amaranth
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
 
 **Ahad Kazmi** 
 <div style="float: left">
@@ -649,11 +654,14 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 <div id="lab-alumni" class="section level2">
 <h2>Lab alumni</h2>
 <ul>
-<li>Sophie Schreiner (BSc student)</li>
-<li>Tom Winkler (BSc, MSc student)</li>
-<li>José Goncalves-Dias (PhD student)</li>
-<li>Julio Martinez (MSc student)</li>
+<li><a
+href="https://scholar.google.com/citations?user=raYNChEAAAAJ&amp;hl=en">Margarita
+Takou (Postdoc)</a></li>
 <li>Kerstin Schulz</li>
+<li>Julio Martinez (MSc student)</li>
+<li>José Goncalves-Dias (PhD student)</li>
+<li>Tom Winkler (BSc, MSc student)</li>
+<li>Sophie Schreiner (BSc student)</li>
 </ul>
 </div>
 <div id="past-visitors" class="section level2">
