--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,34 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="november" class="section level3">
+<h3>November</h3>
+<div id="tuesday-november-25" class="section level4">
+<h4>Tuesday November 25</h4>
+<p><a href="https://doi.org/10.1002/ajb2.16350">Feng et al, 2025</a> The
+link between ancient whole-genome duplications and cold adaptations in
+the Caryophyllaceae</p>
+</div>
+<div id="tuesday-november-18" class="section level4">
+<h4>Tuesday November 18</h4>
+<p><a
+href="https://www.cell.com/cell/fulltext/S0092-8674(25)01085-2">Garsmeur
+et al, 2025</a> The genomic footprints of wild Saccharum species trace
+domestication, diversification, and modern breeding of sugarcane</p>
+</div>
+<div id="tuesday-november-11" class="section level4">
+<h4>Tuesday November 11</h4>
+<p><a href="https://doi.org/10.1038/s41576-025-00850-1">Zhang &amp;
+Qian, 2025</a> Functional synonymous mutations and their evolutionary
+consequences</p>
+</div>
+<div id="tuesday-november-4" class="section level4">
+<h4>Tuesday November 4</h4>
+<p><a href="https://www.pnas.org/doi/10.1073/pnas.2514614122">Alam et
+al, 2025</a> Evolutionary histories of functional mutations during the
+domestication and spread of japonica rice in Asia</p>
+</div>
+</div>
 <div id="october" class="section level3">
 <h3>October</h3>
 <div id="tuesday-october-28" class="section level4">
@@ -656,7 +684,7 @@ et al, 2024</a> Mating systems and recombination landscape strongly
 shape genetic diversity and selection in wheat relatives</p>
 </div>
 </div>
-<div id="november" class="section level3">
+<div id="november-1" class="section level3">
 <h3>November</h3>
 <div id="tuesday-november-26" class="section level4">
 <h4>Tuesday November 26</h4>
@@ -928,7 +956,7 @@ et al., preprint</a> Conflicts in natural selection constrain adaptation
 to climate change in Arabidopsis thaliana</p>
 </div>
 </div>
-<div id="november-1" class="section level3">
+<div id="november-2" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-30" class="section level4">
 <h4>Thursday November 30</h4>
@@ -1180,7 +1208,7 @@ walnuts (Juglans regia)</p>
 </div>
 <div id="section-2" class="section level2">
 <h2>2022</h2>
-<div id="november-2" class="section level3">
+<div id="november-3" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-24" class="section level4">
 <h4>Thursday November 24</h4>
@@ -1409,7 +1437,7 @@ natural Mimulus population</p>
 Galápagos tomato</p>
 </div>
 </div>
-<div id="november-3" class="section level3">
+<div id="november-4" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-25" class="section level4">
 <h4>Thursday November 25</h4>
@@ -1666,7 +1694,7 @@ et al, preprint</a> A framework to quantify phenotypic and genotypic
 parallel evolution</p>
 </div>
 </div>
-<div id="november-4" class="section level3">
+<div id="november-5" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-26" class="section level4">
 <h4>Thursday November 26</h4>
@@ -1905,7 +1933,7 @@ Domestication and Environmental Conditions in Barley</p>
 <p>No C.R.O.P</p>
 </div>
 </div>
-<div id="november-5" class="section level3">
+<div id="november-6" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-28" class="section level4">
 <h4>Thursday November 28</h4>
@@ -2233,7 +2261,7 @@ href="https://www.nature.com/articles/s41477-018-0311-x.epdf?author_access_token
 et al. 2018</a> Unleashing meiotic crossovers in crops</p>
 </div>
 </div>
-<div id="november-6" class="section level3">
+<div id="november-7" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-29" class="section level4">
 <h4>Thursday November 29</h4>
