--- a/publications.html
+++ b/publications.html
@@ -401,10 +401,15 @@ $(document).ready(function () {
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
 <ul>
-<li><p><a href="https://doi.org/10.1101/2025.04.17.649361">Domestication
-shaped the chromatin landscape of grain amaranth</a><br />
-<strong>Graf C, Winkler TS</strong>, Maughan PJ and <strong>Stetter,
-MG</strong>. bioRxiv</p></li>
+<li><p><a href="">Domestication of the ancient grain Amaranthus cruentus
+L.</a><br />
+Sulub-Tun RA , <strong>Singh A</strong> , Cifuentes-Velasquez R,
+<strong>Stetter MG</strong> and Sanchez-del Pino I. bioRxiv</p></li>
+<li><p><a href="https://doi.org/10.1101/2025.09.28.679017">Adaptive
+Dynamics of Quantitative Traits in a Steadily Changing
+Environment</a><br />
+Pahujani S, <strong>Zhang Y, Stetter MG</strong> and Krug J.
+bioRxiv</p></li>
 <li><p><a href="https://doi.org/10.1101/2025.02.22.639339">First
 Successful Targeted Mutagenesis Using CRISPR/Cas9 in Stably Transformed
 Grain Amaranth Tissue</a><br />
@@ -414,6 +419,19 @@ Grain Amaranth Tissue</a><br />
 <div id="section" class="section level2">
 <h2>2025</h2>
 <ul>
+<li><p><a
+href="https://doi.org/10.1038/s41467-025-66445-w">Domestication shaped
+the chromatin landscape of grain amaranth</a><br />
+<strong>Graf C, Winkler TS</strong>, Maughan PJ and <strong>Stetter,
+MG</strong>. <em>Nature Communications</em> <a
+href="https://doi.org/10.1101/2025.04.17.649361">Preprint</a></p></li>
+<li><p><a
+href="https://doi.org/10.1146/annurev-ecolsys-102723-053810">The
+Molecular Basis of Adaptation to Climatic Factors and Range Change in
+Plants</a><br />
+Hancock A, Portalier S, Fulgione A, <strong>Stetter MG</strong>, &amp;
+de Meaux, J <em>Annual Review of Ecology, Evolution, and
+Systematics</em></p></li>
 <li><p><a href="https://doi.org/10.1007/s00122-025-04940-w">Assessing
 and mining grain amaranth diversity for sustainable cropping
 systems</a><br />
