--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,22 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="december" class="section level3">
+<h3>December</h3>
+<div id="tuesday-december-16" class="section level4">
+<h4>Tuesday December 16</h4>
+<p><a href="https://www.nature.com/articles/s41586-025-09703-7">Spence
+et al, 2025</a> Specificity, length and luck drive gene rankings in
+association studies</p>
+</div>
+<div id="tuesday-december-2" class="section level4">
+<h4>Tuesday December 2</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.12.09.627636v2">Feng
+et al, 2025</a> An X-linked sex determination mechanism in cannabis and
+hop</p>
+</div>
+</div>
 <div id="november" class="section level3">
 <h3>November</h3>
 <div id="tuesday-november-25" class="section level4">
@@ -674,7 +690,7 @@ America</p>
 </div>
 <div id="section" class="section level2">
 <h2>2024</h2>
-<div id="december" class="section level3">
+<div id="december-1" class="section level3">
 <h3>December</h3>
 <div id="tuesday-december-3" class="section level4">
 <h4>Tuesday December 3</h4>
@@ -946,7 +962,7 @@ driven by spatially variable purifying selection</p>
 </div>
 <div id="section-1" class="section level2">
 <h2>2023</h2>
-<div id="december-1" class="section level3">
+<div id="december-2" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-7" class="section level4">
 <h4>Thursday December 7</h4>
@@ -1421,7 +1437,7 @@ and the genetic basis of agronomic traits</p>
 </div>
 <div id="section-3" class="section level2">
 <h2>2021</h2>
-<div id="december-2" class="section level3">
+<div id="december-3" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-9" class="section level4">
 <h4>Thursday December 9</h4>
@@ -1677,7 +1693,7 @@ gene flow from South America</p>
 </div>
 <div id="section-4" class="section level2">
 <h2>2020</h2>
-<div id="december-3" class="section level3">
+<div id="december-4" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-10" class="section level4">
 <h4>Thursday December 10</h4>
@@ -1919,7 +1935,7 @@ Overdominance Promotes Diversity in Regions of Low Recombination</p>
 </div>
 <div id="section-5" class="section level2">
 <h2>2019</h2>
-<div id="december-4" class="section level3">
+<div id="december-5" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-12" class="section level4">
 <h4>Thursday December 12</h4>
@@ -2231,7 +2247,7 @@ legacy of maize in South America</p>
 </div>
 <div id="section-6" class="section level2">
 <h2>2018</h2>
-<div id="december-5" class="section level3">
+<div id="december-6" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-27" class="section level4">
 <h4>Thursday December 27</h4>
