--- a/people.html
+++ b/people.html
@@ -610,7 +610,7 @@ amaranth.</p>
 <p>Sophie helps with plant work and field experiments. <!-- break -->
 <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Alicia_Vossmann.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Alicia Vossmann</strong>
 <div style="float: left">
