new HiWis and papers and CROP

--- a/people.html
+++ b/people.html
@@ -610,14 +610,24 @@ amaranth.</p>
 <p>Sophie helps with plant work and field experiments. <!-- break -->
 <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/people/Alicia_Vossmann.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Charlotte_Scharphuis.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Alicia Vossmann</strong>
+<strong>Charlotte Scharphuis</strong>
 <div style="float: left">
 
 </div>
-<p>Alicia is an intern, testing the function of transcription factors
-regulating betalain biosynthesis.</p>
+<p>Charlotte is a BSc student in Biology and helps with plant care and
+lab duties.</p>
+<p><br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Pia Wiesemann</strong>
+<div style="float: left">
+
+</div>
+<p>Pia is a BSc student in Biology and helps with plant care and lab
+duties.</p>
 <p><br> <br> <br> <br> <br> <br> <br></p>
 <!-- break 
 
