--- a/publications.html
+++ b/publications.html
@@ -401,6 +401,11 @@ $(document).ready(function () {
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
 <ul>
+<li><p><a
+href="https://www.biorxiv.org/cgi/content/short/2026.01.08.698315v1">The
+grain amaranth pangenome reveals domestication-associated changes in
+diversity and function of structural variation</a><br />
+<strong>Ludwig E, Winkler TS and Stetter MG</strong> bioRxiv</p></li>
 <li><p><a href="">Domestication of the ancient grain Amaranthus cruentus
 L.</a><br />
 Sulub-Tun RA , <strong>Singh A</strong> , Cifuentes-Velasquez R,
