--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,18 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="january" class="section level3">
+<h3>January</h3>
+<div id="tuesday-january-20" class="section level4">
+<h4>Tuesday January 20</h4>
+<p><a
+href="https://www.science.org/doi/10.1126/science.adx2022">Jørgensen et
+al, 2025</a> Postdomestication selection of MKK3 shaped seed dormancy
+and end-use traits in barley</p>
+</div>
+</div>
+<div id="section" class="section level2">
+<h2>2025</h2>
 <div id="december" class="section level3">
 <h3>December</h3>
 <div id="tuesday-december-16" class="section level4">
@@ -668,7 +680,7 @@ al, 2025</a> Leveraging a phased pangenome for haplotype design of
 hybrid potato</p>
 </div>
 </div>
-<div id="january" class="section level3">
+<div id="january-1" class="section level3">
 <h3>January</h3>
 <div id="tuesday-january-28" class="section level4">
 <h4>Tuesday January 28</h4>
@@ -688,7 +700,8 @@ et al, 2024</a> The genomic origin of early maize in eastern North
 America</p>
 </div>
 </div>
-<div id="section" class="section level2">
+</div>
+<div id="section-1" class="section level2">
 <h2>2024</h2>
 <div id="december-1" class="section level3">
 <h3>December</h3>
@@ -949,7 +962,7 @@ in adaptive variation and the architecture of flowering time in
 Amaranthus tuberculatus</p>
 </div>
 </div>
-<div id="january-1" class="section level3">
+<div id="january-2" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-25" class="section level4">
 <h4>Thursday January 25</h4>
@@ -960,7 +973,7 @@ driven by spatially variable purifying selection</p>
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>2023</h2>
 <div id="december-2" class="section level3">
 <h3>December</h3>
@@ -1199,7 +1212,7 @@ et al., preprint</a> Drivers of genomic landscapes of differentiation
 across Populus divergence gradient</p>
 </div>
 </div>
-<div id="january-2" class="section level3">
+<div id="january-3" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-26" class="section level4">
 <h4>Thursday January 26</h4>
@@ -1222,7 +1235,7 @@ walnuts (Juglans regia)</p>
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>2022</h2>
 <div id="november-3" class="section level3">
 <h3>November</h3>
@@ -1418,7 +1431,7 @@ et al 2022</a> Mutation bias reflects natural selection in Arabidopsis
 thaliana</p>
 </div>
 </div>
-<div id="january-3" class="section level3">
+<div id="january-4" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-27" class="section level4">
 <h4>Thursday January 27</h4>
@@ -1435,7 +1448,7 @@ and the genetic basis of agronomic traits</p>
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-4" class="section level2">
 <h2>2021</h2>
 <div id="december-3" class="section level3">
 <h3>December</h3>
@@ -1668,7 +1681,7 @@ Arabidopsis thaliana Reveals Multiple Sources of Introduction from
 Across Eurasia</p>
 </div>
 </div>
-<div id="january-4" class="section level3">
+<div id="january-5" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-28" class="section level4">
 <h4>Thursday January 28</h4>
@@ -1691,7 +1704,7 @@ gene flow from South America</p>
 </div>
 </div>
 </div>
-<div id="section-4" class="section level2">
+<div id="section-5" class="section level2">
 <h2>2020</h2>
 <div id="december-4" class="section level3">
 <h3>December</h3>
@@ -1922,7 +1935,7 @@ transposable element over-accumulation which provides variants for local
 adaptation</p>
 </div>
 </div>
-<div id="january-5" class="section level3">
+<div id="january-6" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-30" class="section level4">
 <h4>Thursday January 30</h4>
@@ -1933,7 +1946,7 @@ Overdominance Promotes Diversity in Regions of Low Recombination</p>
 </div>
 </div>
 </div>
-<div id="section-5" class="section level2">
+<div id="section-6" class="section level2">
 <h2>2019</h2>
 <div id="december-5" class="section level3">
 <h3>December</h3>
@@ -2206,7 +2219,7 @@ routes to adaptation</p>
 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
-<div id="january-6" class="section level3">
+<div id="january-7" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
 <h4>Thursday January 31</h4>
@@ -2245,7 +2258,7 @@ legacy of maize in South America</p>
 </div>
 </div>
 </div>
-<div id="section-6" class="section level2">
+<div id="section-7" class="section level2">
 <h2>2018</h2>
 <div id="december-6" class="section level3">
 <h3>December</h3>
