--- a/people.html
+++ b/people.html
@@ -620,7 +620,7 @@ amaranth.</p>
 lab duties.</p>
 <p><br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Pia_Wiesemann.jpeg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Pia Wiesemann</strong>
 <div style="float: left">
