--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,13 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="january" class="section level3">
 <h3>January</h3>
+<div id="tuesday-january-27" class="section level4">
+<h4>Tuesday January 27</h4>
+<p><a
+href="https://www.sciencedirect.com/science/article/pii/S1369526625001608">Roulin,
+2025</a> Blinded by the lights? Re-examining the adaptive role of
+transposable elements in plants with population genomics</p>
+</div>
 <div id="tuesday-january-20" class="section level4">
 <h4>Tuesday January 20</h4>
 <p><a
