--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,25 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="february" class="section level3">
+<h3>February</h3>
+<div id="tuesday-feburary-17" class="section level4">
+<h4>Tuesday Feburary 17</h4>
+<p><a
+href="https://link.springer.com/article/10.1007/s00425-026-04938-8#Sec10">Sielmann,
+2026</a> Combined R2R3–MYB transcription factor mutants reveal the
+regulatory structure of the Arabidopsis thaliana flavonoid biosynthesis
+pathway</p>
+</div>
+<div id="tuesday-feburary-10" class="section level4">
+<h4>Tuesday Feburary 10</h4>
+<p><a
+href="https://www.cell.com/molecular-plant/fulltext/S1674-2052(25)00440-X">Celebioglu,
+2025</a> Domestication-related changes at PvMYB26 reduce pod shattering
+in common bean and shed light on the origins of agriculture in the
+Americas</p>
+</div>
+</div>
 <div id="january" class="section level3">
 <h3>January</h3>
 <div id="tuesday-january-27" class="section level4">
@@ -658,7 +677,7 @@ al, 2025</a> Genetic basis of camouflage in an alpine plant and its
 long-term co-evolution with an insect herbivore</p>
 </div>
 </div>
-<div id="february" class="section level3">
+<div id="february-1" class="section level3">
 <h3>February</h3>
 <div id="tuesday-february-25" class="section level4">
 <h4>Tuesday February 25</h4>
@@ -1196,7 +1215,7 @@ al., 2023</a> Wild progenitors provide a sound baseline model for
 evolutionary analysis of domesticated crop species</p>
 </div>
 </div>
-<div id="february-1" class="section level3">
+<div id="february-2" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-23" class="section level4">
 <h4>Thursday February 23</h4>
@@ -1417,7 +1436,7 @@ et al preprint</a> Rapid adaptation and range expansion in response to
 agriculture over the last two centuries</p>
 </div>
 </div>
-<div id="february-2" class="section level3">
+<div id="february-3" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-17" class="section level4">
 <h4>Thursday February 17</h4>
@@ -1659,7 +1678,7 @@ et al 2012</a> Patterns and processes in crop domestication: an
 historical review and quantitative analysis of 203 global food crops</p>
 </div>
 </div>
-<div id="february-3" class="section level3">
+<div id="february-4" class="section level3">
 <h3>February</h3>
 <div id="thursday-febraury-25" class="section level4">
 <h4>Thursday Febraury 25</h4>
@@ -1915,7 +1934,7 @@ et al. 2020</a> In the presence of population structure: From genomics
 to candidate genes underlying local adaptation</p>
 </div>
 </div>
-<div id="february-4" class="section level3">
+<div id="february-5" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-27" class="section level4">
 <h4>Thursday February 27</h4>
@@ -2196,7 +2215,7 @@ and Coop preprint</a> The Linked Selection Signature of Rapid Adaptation
 in Temporal Genomic Data</p>
 </div>
 </div>
-<div id="february-5" class="section level3">
+<div id="february-6" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-28" class="section level4">
 <h4>Thursday February 28</h4>
