--- a/reading.html
+++ b/reading.html
@@ -420,10 +420,9 @@ pathway</p>
 <div id="tuesday-feburary-10" class="section level4">
 <h4>Tuesday Feburary 10</h4>
 <p><a
-href="https://www.cell.com/molecular-plant/fulltext/S1674-2052(25)00440-X">Celebioglu,
-2025</a> Domestication-related changes at PvMYB26 reduce pod shattering
-in common bean and shed light on the origins of agriculture in the
-Americas</p>
+href="https://link.springer.com/content/pdf/10.1186/s12284-026-00884-x_reference.pdf">San,
+2026</a> Independent Origin of Phenol Non-responsivePhenotype Caused By
+Phr1 Variation DuringDomestication of Asian and African Rice</p>
 </div>
 </div>
 <div id="january" class="section level3">
